<resources>
    <string name="app_name">Calculadora</string>
    <string name="bt0">0</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="btSoma">+</string>
    <string name="btMult">*</string>
    <string name="btDiv">/</string>
    <string name="btSub">-</string>
    <string name="btAux">=</string>
    <string name="btClear">CE</string>
    <string name="txtCalc"></string>
    <string name="about">Sobre</string>
    <string name="btBack">--</string>
    <string name="btPercent">%</string>
    <string name="btDecim">,</string>
    <string name="btSinal">+-</string>


</resources>
