<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    tools:context="com.example.sanatiel.calculadora.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="41dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="right"
            android:inputType="textPersonName"
            android:textColor="@color/editTxtFont"
            android:textSize="@dimen/editTxtFont" />

        <Button
            android:id="@+id/bt7"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@+id/editText"
            android:layout_marginTop="15dp"
            android:text="@string/bt7"
            android:textSize="@dimen/btFontSize"
            tools:text="@string/bt7" />

        <Button
            android:id="@+id/bt8"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/editText"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/bt7"
            android:text="@string/bt8"
            android:textSize="@dimen/btFontSize"
            tools:text="@string/bt8" />

        <Button
            android:id="@+id/bt9"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/editText"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/bt8"
            android:text="@string/bt9"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/btClear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_alignParentRight="true"

            android:layout_below="@id/editText"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/bt9"
            android:text="@string/btClear"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt7"
            android:layout_marginTop="10dp"
            android:text="@string/bt4"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/bt6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt9"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/bt5"
            android:text="@string/bt6"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/bt5"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt8"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/bt4"
            android:text="@string/bt5"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/btSoma"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btClear"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/bt6"
            android:text="@string/btSoma"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt4"
            android:layout_marginTop="10dp"
            android:text="@string/bt1"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt5"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/bt1"
            android:text="@string/bt2"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/bt3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt6"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/bt2"
            android:text="@string/bt3"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/btSub"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btSoma"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/bt3"
            android:text="@string/btSub"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/bt0"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt2"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btAux"
            android:text="@string/bt0"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/btMult"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt3"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/bt0"
            android:text="@string/btMult"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/btDiv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btHeight"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btSub"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btMult"
            android:text="@string/btDiv"
            android:textSize="@dimen/btFontSize" />

        <Button
            android:id="@+id/btAux"
            android:layout_width="wrap_content"

            android:layout_height="@dimen/btHeight"
            android:layout_below="@id/bt1"
            android:layout_marginTop="10dp"
            android:text="@string/btAux"
            android:textSize="@dimen/btFontSize" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="41dp"
            android:text="Sanatiel Barros" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtCalculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txtCalculo"
        android:text="@string/txtCalc"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="16dp" />

</android.support.constraint.ConstraintLayout>
